--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,19 @@
+/* //////////// */
+@keyframes color-change {
+    from {
+      background: red;
+    }
+    to{
+      background: yellow;
+    }
+  }
+
+.nav-link:hover{
+        animation-duration: 0.8s;  
+        animation-name: color-change;
+        animation-iteration-count: infinite;
+        animation-direction: alternate;
+  }
 /* changing body background color for all pages */
 body{
     background-color: black;
@@ -10,11 +26,18 @@ body{
     margin: 20px;
     border-bottom: 3px solid white;
 }
-nav:hover{
-    color: green;
-}
+
 .nav-link:active{
     font-size: 15px
+}
+
+/* changing heading color */
+.top{
+    background-color: grey;
+}
+/* changing footer color */
+footer{
+    background-color: grey;
 }
 /* changing h1 color */
 h1{
@@ -32,7 +55,7 @@ h1{
  border: solid 5px white;
  margin-top: 15px;;
 }
-
+/* setting a grid for the gallery page */
 .grid{
     display: grid;
     grid-template-columns: 1fr;
@@ -45,13 +68,14 @@ h1{
 /* Erik The Red text */
 .tittle{
     display: flex;
+    display: none;
 }
 /* adjusting width and height of logo */
 .logo{
     width: 15%;
     height: 15%;
     display: flex;
-    justify-content: center;
+    align-items: center;
 }
 /* main banner image */
 .slide{
@@ -152,10 +176,7 @@ nav{
     transform: scale(2);
     transition: 0.5s;
 }
-/* adding hover properties to links */
-a:hover{
-    color: yellowgreen;
-}
+
 /* adjusting image dimensions */
 #me{
     width: 216px;
@@ -190,6 +211,11 @@ h2{
     column-gap:10px;
     row-gap: 10px;
 }     */
+
+/* //////////////trying to make tittle show */
+.tittle{
+    display: flex;
+}
 .grid{
     display: grid;
     grid-template-columns: 1fr 1fr;
