--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,10 @@
 /* //////////// */
 @keyframes color-change {
     from {
-      background: red;
+      color: red;
     }
     to{
-      background: yellow;
+      color: yellow;
     }
   }
 
@@ -74,8 +74,8 @@ h1{
 .logo{
     width: 15%;
     height: 15%;
-    display: flex;
-    align-items: center;
+    position:relative;
+    left:40%;
 }
 /* main banner image */
 .slide{
@@ -180,7 +180,7 @@ nav{
 /* adjusting image dimensions */
 #me{
     width: 216px;
-    padding-top: 80px;
+    padding-top: 60px;
 }
 /* changing font color */
 p{
@@ -190,9 +190,10 @@ p{
     justify-content: center;
 }
 /* home page paragraph text */
-main div{
+.home-cont{
     display: flex;
-    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 /* adjusting all image padding on gallery page */
 .img{
@@ -201,6 +202,16 @@ main div{
 }
 h2{
     color: white;
+}
+/* adjusting form spacing and sizing */
+.message{
+    /* margin-top: 20px; */
+    padding: 5px;
+    border-radius: 15px;
+}
+#map{
+    width:100%;
+    height: 350px;
 }
 /* /////////////////////// */
 /* ////////Tablet//////// */
@@ -212,10 +223,32 @@ h2{
     row-gap: 10px;
 }     */
 
-/* //////////////trying to make tittle show */
+/*  make tittle show */
 .tittle{
-    display: flex;
+    display: block;
+    justify-content: center;
 }
+/* parent element around form aand map */
+.con{
+    display:flex;
+}
+/* setting form width */
+.form{
+    width: 50%;
+}
+.damn{
+    width: 50%;
+}
+/* setting full width of parent */
+#map{
+    width:100%;
+}
+/* re-adjusting logo positioning */
+.logo{
+    position:relative;
+    left:0%;
+}
+
 .grid{
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -276,10 +309,39 @@ h2{
 /* ///////////////////// */
 @media screen and (min-width: 1024px) {
 
-    .slide{
-        
+        /*  make tittle show */
+    .tittle{
+        display: block;
+        justify-content: center;
     }
-
+    /* parent element around form aand map */
+    .con{
+        display:flex;
+    }
+    /* setting form width */
+    .form{
+        width: 50%;
+    }
+    /* setting full width of parent */
+    #map{
+    width:100%;
+    }
+    /* re-adjusting logo positioning */
+    .logo{
+        position:relative;
+        left:0%;
+    }
+    /* parent element around form aand map */
+.con{
+    display:flex;
+}
+/* setting form width */
+.form{
+    width: 50%;
+}
+.damn{
+    width: 50%;
+}
 
     .grid{
         display: grid;
