--- a/css/main.css
+++ b/css/main.css
@@ -7,21 +7,25 @@
       color: yellow;
     }
   }
-/* 
-  .logo {
-    position: absolute;
-    animation: linear infinite;
-    animation-name: run;
-    animation-duration: s;
-  }
+/* /////////// */
   @keyframes run {
-    from {
-      left: 20%;
+      0% {
+            left: 20%;
+        }
+        50% {
+            left: 60%;
+        }
+        100% {
+            left: 20%;
+        }
     }
-    to {
-        right: 40%;
+     /* logo animation adjustments */
+    .logo {
+      position: absolute;
+      animation: linear infinite;
+      animation-name: run;
+      animation-duration: 9s;
     }
-  } */
 
 .nav-link:hover{
         animation-duration: 0.8s;  
@@ -218,9 +222,14 @@ p{
 h2{
     color: white;
 }
+/* adding an underline to all h2 elements with a main element as a parent */
+main h2{
+    border-bottom: 2px solid white;
+}
 /* adjusting form spacing and sizing */
 .message{
-    /* margin-top: 20px; */
+    margin-top: 15px;
+    margin-left: 15px;
     padding: 5px;
     border-radius: 15px;
 }
@@ -234,9 +243,16 @@ h2{
     text-align: center;
 }
 /* adjusting footer sizing */
-footer, h2{
-    padding: 8px;
+footer h2{
+    padding: 20px;
 }
+#message{
+    margin-bottom: 20px;
+}
+#button {
+    margin-bottom: 15px;
+    margin-left: 10px;
+  }
 /* /////////////////////// */
 /* ////////Tablet//////// */
 /* ///////////////////// */
@@ -246,6 +262,25 @@ footer, h2{
     column-gap:10px;
     row-gap: 10px;
 }     */
+/* header animation */
+@keyframes run {
+    0% {
+          left: 40%;
+      }
+      50% {
+          left: 60%;
+      }
+      100% {
+          left: 40%;
+      }
+  }
+ /* logo animation adjustments */
+  .logo {
+    position: absolute;
+    animation: linear infinite;
+    animation-name: run;
+    animation-duration: 5s;
+  }
 
 /*  make tittle show */
 .tittle{
@@ -326,12 +361,44 @@ footer, h2{
     grid-column: 2;
     grid-row: 4;
 }
+p{
+    font-size: 25px;
+}
+h2{
+    font-size: 25px;
+}
 
 }
 /* /////////////////////// */
 /* ////////Desktop//////// */
 /* ///////////////////// */
 @media screen and (min-width: 1024px) {
+
+    p{
+        font-size: 30px;
+    }
+    h2{
+        font-size: 30px;
+    }
+    /* header animation */
+@keyframes run {
+    0% {
+          left: 40%;
+      }
+      50% {
+          left: 60%;
+      }
+      100% {
+          left: 40%;
+      }
+  }
+  /* logo animation adjustments */
+  .logo {
+    position: absolute;
+    animation: linear infinite;
+    animation-name: run;
+    animation-duration: 5s;
+  }
 
         /*  make tittle show */
     .tittle{
